[react-search-refiners] * Updated to SPFx 1.7.1 * Fixed a z-index bug on suggestions due to a new SPFx page structure

--- a/samples/react-search-refiners/spfx/src/webparts/searchBox/SearchBoxWebPart.module.scss
+++ b/samples/react-search-refiners/spfx/src/webparts/searchBox/SearchBoxWebPart.module.scss
@@ -46,3 +46,8 @@
         background-color: '[theme:themeDarker, default:#0078d7]';
     }
 }
+
+.parentStackingCtx {
+    position: relative;
+    z-index: 1;
+}
